# Werewolf

./: .gitignore  CMakeLists.txt
entt/: CMakeLists.txt  Findentt.cmake
sfml/: CMakeLists.txt  FindSFML.cmake
sources/: main.cpp
